Fixed heading font on small devices

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -99,7 +99,7 @@ body {
     @apply bg-[#cf253f] hover:bg-[#cf253f]/80;
   }
   .heading {
-    @apply font-roboto text-lg md:text-4xl font-medium mb-2 text-gray-800 dark:text-white;
+    @apply font-roboto text-2xl md:text-4xl font-medium mb-2 text-gray-800 dark:text-white;
   }
   .subHeading {
     @apply font-montserrat text-base md:text-lg font-medium mb-2 md:mb-4 text-gray-800 dark:text-white;
